Skip to content

libvlc 4.0.0 - a huge memory leak causing system crash - due to opengl video filter - QtGl & libvlc_video_set_output_callbacks

Hi,

Ubuntu 20.04 & 21.04 Different platforms (ATI and NVIDIA GPUs).

When trying to run the QtGl sample code under /vlc/doc/libvlc/QtGL Huge memory leak cause the system to hang (after a minute or so).

I'm trying to use the function libvlc_video_set_output_callbacks() to enable opengl filter on top of the video.

If this function is used (by example design) the memory leak exist causing system crash. If this function disabled no memory leaks. looks like the issue with one or more callbacks functions passed to libvlc_video_set_output_callbacks().

btw - the sample code for sdl_opengl_player.cpp (located under vlc/doc/libvlc/) - is running with no problem!!!

I checked the codes on many platforms - definitely QtGl SW issue!

Edited by Nir Shemesh
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information